--- a/dagster/workspace.yaml
+++ b/dagster/workspace.yaml
@@ -1,5 +1,5 @@
 load_from:
   - grpc_server:
-      host: news_driver_investing
+      host: dagster-project-code
       port: 4000
       location_name: "news_driver_investing"
