--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pyarrow = "^12.0.1"
 mlflow = "^2.4.1"
 dagster = "^1.3.11"
 dagster-postgres = "^0.19.11"
+youtube-transcript-api = "^0.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
