Setting up basic sequence prediction

--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,5 @@ YOUTUBE_API_ROOT=https://www.googleapis.com/youtube/v3/
 # https://www.alphavantage.co/support/#api-key
 ALPHA_VANTAGE_API_KEY=my-fake-alpha-vantage-api-key
 ALPHA_VANTAGE_ROOT=https://www.alphavantage.co
+
+START_DATE="2023-01-01"
