--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ mlflow = "^2.4.1"
 dagster = "^1.3.11"
 dagster-postgres = "^0.19.11"
 youtube-transcript-api = "^0.6.1"
+tokenizers = "^0.13.3"
+catboost = "^1.2"
 
 
 [tool.poetry.group.dev.dependencies]
